# arduino-serial-mux

./: README.rst  mux.py  ping.py  setup.cfg
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml
docs/: api.rst  cli.rst  conf.py  index.rst  install.rst  introduction.rst  requirements.txt  usage.rst
docs/api/: serial_mux.rst  vserial.rst
examples/demo/: demo.py
serial_mux/: __init__.py  buffer.py  cli.py  control.py  mux.py  serial_mux.py  test.py  vserial.py
tests/: _serial.py  serial.py  test_device.py  test_serial_mux.py
