[metadata]
name = arduino-serial-mux
version = 1.1.0
description = Arduino serial port multiplexer.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = jlaros@fixedpoint.nl
url = https://arduino-serial-mux.readthedocs.io
keywords =
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    pyserial>=3.4

[options.entry_points]
console_scripts =
    serial_mux = serial_mux.cli:main

[flake8]
per-file-ignores =
    docs/conf.py: E402
    serial_mux/__init__.py: F401
    serial_mux/serial_mux.py: E252
